cargo-features = ["codegen-backend"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.build-override]
codegen-backend = "llvm"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

# Remove anything above this comment. I added it for compile speed. Hopefully I don't forget to remove it.

[package]
authors = ["Okko Hakola <okkohakola@gmail.com>"]
categories = ["gui", "game-development"]
description = "Vulkano Backend for Bevy"
edition = "2021"
homepage = "https://github.com/hakolao/bevy_vulkano"
keywords = ["gui", "imgui", "vulkano", "gamedev", "bevy"]
license = "Apache-2.0"
name = "bevy_vulkano"
readme = "README.md"
repository = "https://github.com/hakolao/bevy_vulkano"
version = "0.15.0"

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-util = { git = "https://github.com/vulkano-rs/vulkano" }
winit = { version = "0.30", default-features = false }

[dependencies.bevy]
default-features = false
features = ["bevy_winit"]
version = "0.14"

[dev-dependencies]
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
anyhow = "1.0"
rand = "0.8.5"

[dev-dependencies.bevy]
default-features = true
version = "0.14"

[[example]]
name = "triangle"
path = "examples/triangle/main.rs"
required-features = []

[package.metadata.example.triangle]
name = "triangle"
description = "Triangle!"

[[example]]
name = "game_of_life"
path = "examples/game_of_life/main.rs"
required-features = []

[package.metadata.example.game_of_life]
name = "Game of life"
description = "Example running a more comples vulkano pipeline with compute shaders"

# [[example]]
# name = "multi_window_gui"
# path = "examples/multi_window_gui/main.rs"
# required-features = ["gui", "links", "clipboard"]

# [package.metadata.example.multi_window_gui]
# name = "Multi Window Gui"
# description = "Example running multiple windows with egui gui"

[[example]]
name = "windowless_compute"
path = "examples/windowless_compute/main.rs"
required-features = []

[package.metadata.example.windowless_compute]
name = "Windowless compute shader"
description = "Example running a windowless vulkano compute shader"